#90 - safety for somewhat shared vm, needs proper management in testing