@@ -274,7 +274,12 @@
                 <scalaCollectionCompatVersion>2.13.0</scalaCollectionCompatVersion>
 
                 <encodingDir>agnosticEncoding</encodingDir>
+
                 <emptyToNullSupport>emptyToNullSupport</emptyToNullSupport>
+
+                <!-- bump the versions for jdk 17 / 2.13 -->
+                <scoverage.plugin.version>2.1.2</scoverage.plugin.version>
+                <mavenSitePluginVersion>3.21.0</mavenSitePluginVersion>
             </properties>
 
             <dependencies>
@@ -462,7 +467,7 @@
         <rngVersion>1.3</rngVersion>
         <zeroAllocHashingVersion>0.15</zeroAllocHashingVersion>
         <scalaCrossPluginVersion>0.3.0</scalaCrossPluginVersion>
-        <naked-local-fs-version>0.1.0</naked-local-fs-version>
+        <naked-local-fs-version>0.2.0</naked-local-fs-version>
 
         <deltaCoreVersion>0.6.1</deltaCoreVersion> <!-- for dbr builds -->
         <deltaArtifact>core</deltaArtifact>
@@ -482,6 +487,8 @@
         <emptyToNullSupport>scala</emptyToNullSupport>
 
         <testingCompatVersionPrefix>_</testingCompatVersionPrefix>
+
+        <scalatestMavenPluginVersion>2.2.0</scalatestMavenPluginVersion>
     </properties>
 
     <repositories>
@@ -552,12 +559,11 @@
         </dependency> -->
 
         <dependency>
-            <groupId>com.globalmentor</groupId>
+            <groupId>com.sparkutils</groupId>
             <artifactId>hadoop-bare-naked-local-fs</artifactId>
             <version>${naked-local-fs-version}</version>
             <scope>test</scope>
         </dependency>
-
         <dependency>
             <groupId>com.google.guava</groupId>
             <artifactId>guava</artifactId>
@@ -976,9 +982,29 @@
                         <org.xerial.snappy.tempdir>${java.io.tmpdir}/teamcity/megdp/extrajars</org.xerial.snappy.tempdir>
                         <buildDirectory>${project.build.directory}</buildDirectory>
                     </systemPropertyVariables>
+                    <skipTests>true</skipTests>
                 </configuration>
             </plugin>
-
+            <plugin>
+                <groupId>org.scalatest</groupId>
+                <artifactId>scalatest-maven-plugin</artifactId>
+                <version>${scalatestMavenPluginVersion}</version>
+                <configuration>
+                    <reportsDirectory>${project.build.directory}/surefire-reports</reportsDirectory>
+                    <junitxml>.</junitxml>
+                    <filereports>WDF TestSuite.txt</filereports>
+                    <!-- <htmlreporters>${project.build.directory}/html/scalatest</htmlreporters> -->
+                    <argLine>-Xmx4g -ea -XX:+IgnoreUnrecognizedVMOptions --add-opens=java.base/java.lang=ALL-UNNAMED --add-opens=java.base/java.lang.invoke=ALL-UNNAMED --add-opens=java.base/java.lang.reflect=ALL-UNNAMED --add-opens=java.base/java.io=ALL-UNNAMED --add-opens=java.base/java.net=ALL-UNNAMED --add-opens=java.base/java.nio=ALL-UNNAMED --add-opens=java.base/java.util=ALL-UNNAMED --add-opens=java.base/java.util.concurrent=ALL-UNNAMED --add-opens=java.base/java.util.concurrent.atomic=ALL-UNNAMED --add-opens=java.base/sun.nio.ch=ALL-UNNAMED --add-opens=java.base/sun.nio.cs=ALL-UNNAMED --add-opens=java.base/sun.security.action=ALL-UNNAMED --add-opens=java.base/sun.util.calendar=ALL-UNNAMED</argLine>
+                </configuration>
+                <executions>
+                    <execution>
+                        <id>test</id>
+                        <goals>
+                            <goal>test</goal>
+                        </goals>
+                    </execution>
+                </executions>
+            </plugin>
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-project-info-reports-plugin</artifactId>
@@ -1126,6 +1152,17 @@
                 <artifactId>maven-surefire-report-plugin</artifactId>
                 <version>${surefireReportPluginVersion}</version>
             </plugin>
+ <!--           <plugin>
+                <groupId>org.scalatest</groupId>
+                <artifactId>scalatest-maven-plugin</artifactId>
+                <version>${scalatestMavenPluginVersion}</version>
+                <configuration>
+                    <reportsDirectory>${project.build.directory}/surefire-reports</reportsDirectory>
+                    <junitxml>.</junitxml>
+                    <filereports>WDF TestSuite.txt</filereports>
+                </configuration>
+            </plugin>
+-->
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-project-info-reports-plugin</artifactId>
